<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    tools:context=".TransportDialogFragment"
    android:orientation="vertical"
    android:background="#5555"
    android:id="@+id/dialogContainer"
    >

    <TextView
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_parameters"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        />

    <Spinner
        android:entries="@array/transports_array"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/transportSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <TextView
        android:id="@+id/modelTransport"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_model"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        />
    <EditText
        android:id="@+id/modelEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_model"
        android:autofillHints="@string/enter_model"
        android:inputType="text"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/enterDisplacementTextView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_displacement"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        />
    <EditText
        android:visibility="invisible"
        android:id="@+id/displacementEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_displacement"
        android:autofillHints="@string/enter_displacement"
        android:inputType="number"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/enterFlightRangeTextView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_flightRange"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        />
    <EditText
        android:visibility="invisible"
        android:id="@+id/flightRangeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_flightRange"
        android:autofillHints="@string/enter_flightRange"
        android:inputType="number"/>

    <TextView
        android:visibility="invisible"
        android:id="@+id/enterFuelConsumptionTextView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_fuelConsumption"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/design_default_color_primary"
        />
    <EditText
        android:visibility="invisible"
        android:id="@+id/fuelConsumptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_fuelConsumption"
        android:autofillHints="@string/enter_fuelConsumption"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="20sp"
            />
        <Button
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            android:id="@+id/buttonAccept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/accept"
            android:textSize="20sp"
            />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>